wacc/test/golden/syntaxErr.while.whileNodone
# while missing closing done

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
end


In test/wacc_examples/invalid/syntaxErr/while/whileNodone.wacc (line 14, column 1):
  unexpected "end"
  expected ";" or done
  >    skip
  >end
   ^^^
  >